make header in tab

--- a/views/index.erb
+++ b/views/index.erb
@@ -65,8 +65,8 @@
                 <tr>
                   <td id="b_syain_cd"></td>
                   <td id="b_syain_name"></td>
-                  <td id="b_nymd">2015/03/01</td>
-                  <td id="b_lank">社員初級</td>
+                  <td id="b_nymd"></td>
+                  <td id="b_lank"></td>
                 </tr>
               </tbody>
             </table>
